2004-01-01  Alexandre Duret-Lutz  <adl@gnu.org>

	Do not output .lo rules for programs and static libraries objects,
	and do not output .o/.obj rules for libtool libraries.  This is
	about explicit rules only, not inference rules.
	* automake.in (handle_single_transform_list): Rename as ...
	(handle_single_transform): ... this.  Take a single file
	to transform (it was only called this way) and accept a new
	%transform argument.  Fill %lang_specific_files with list
	references instead of strings, and append %transform to each
	of these lists.
	(define_objects_from_sources, handle_source_transform):
	Take a %transform argument, and forward it to &handle_single_transform.
	(handle_languages): Adjust to the new format of
	%lang_specific_files, and honor its %transform part.
	(handle_programs, handle_libraries, handle_ltlibraries): Override
	%NONLIBTOOL% and %LIBTOOL% while calling handle_source_transform.
	(make_paragraphs): Define %NONLIBTOOL% by default.  Make sure
	%transform settings override global settings.
	* lib/am/depend2.am (%OBJ%, %OBJOBJ%): Define only if %NONLIBTOOL%.
	* tests/libtool3.test: Augment to check Makefile.ins for unneeded
	rules.
	Suggested by Thomas Fitzsimmons.

	* automake.in, aclocal.in: Bump copyright years.

2003-12-31  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (generate_makefile): Update misleading comment.

	* automake.in (handle_languages): Define %DEPBASE% conditionally
	on subdir-objects.  Define SUBDIROBJ.  Do not clean *_.c files
	here ...
	(lang_c_finish): ... do it here.
	(handle_single_transform_list): Do not output specific rules for
	subdir-objects files which are not renamed.  This should reduce
	the size of Makefiles with lots of subdirectory sources.
	* lib/depcomp: Simplify computation of dependency output, and use
	DEPDIR.
	* lib/am/depend2.am (%EXT%.o, %EXT%.obj, %EXT%.lo): Adjust call
	to depcomp.  Compute depbase on-the-fly in generic fastdep rules
	for subdir-objects.