@@ -1005,14 +1005,6 @@ sub handle_languages
 	    require_conf_file ("$am_file.am", FOREIGN, 'depcomp');
 
 	    my @deplist = sort keys %dep_files;
-
-	    # We define this as a conditional variable because BSD
-	    # make can't handle backslashes for continuing comments on
-	    # the following line.
-	    define_pretty_variable ('DEP_FILES',
-				    new Automake::Condition ('AMDEP_TRUE'),
-				    INTERNAL, @deplist);
-
 	    # Generate each `include' individually.  Irix 6 make will
 	    # not properly include several files resulting from a
 	    # variable expansion; generating many separate includes
