@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2001, 2002  Free Software Foundation, Inc.
+# Copyright (C) 2001, 2002, 2004  Free Software Foundation, Inc.
 #
 # This file is part of GNU Automake.
 #
@@ -18,13 +18,15 @@
 # the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
 # Boston, MA 02111-1307, USA.
 
-# check that 'DEP_FILES' is defined when there are many header files
+# Check that dependencies are included when there are many header files.
 
 . ./defs || exit 1
 
+set -e
+
 echo AC_PROG_CC >> configure.in
 
-$ACLOCAL || exit 1
+$ACLOCAL
 
 headers=
 for header in one.h two.h three.h four.h five.h six.h
@@ -35,9 +37,7 @@ bin_PROGRAMS = fred
 fred_SOURCES = fred1.c $headers
 END
 
-    $AUTOMAKE || exit 1
+    $AUTOMAKE
 
-    $EGREP '^(@[^@]+@)*DEP_FILES = ' Makefile.in || exit 1
+    test 1 = `grep '^@AMDEP_TRUE@@am__include@' Makefile.in | wc -l`
 done
-
-exit 0
