@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 1996, 1997, 1998, 1999, 2001, 2002
+# Copyright (C) 1996, 1997, 1998, 1999, 2001, 2002, 2004
 # Free Software Foundation, Inc.
 #
 # This file is part of GNU Automake.
@@ -22,26 +22,23 @@
 # Test to make sure EXTRA_..._SOURCES actually works.
 # Bug report from Henrik Frystyk Nielsen.
 
-required=GNUmake
 . ./defs || exit 1
 
-cat >> configure.in << 'END'
-AC_PROG_CC
-END
+set -e
+
+echo AC_PROG_CC >> configure.in
 
 cat > Makefile.am << 'END'
 bin_PROGRAMS = www
 www_SOURCES = www.c
 EXTRA_www_SOURCES = xtra.c
 www_LDADD = @extra_stuff@
-magic:
-	@echo $(DEP_FILES)
 END
 
 : > www.c
 : > xtra.c
 
-$ACLOCAL || exit 1
-$AUTOMAKE || exit 1
+$ACLOCAL
+$AUTOMAKE
 
 grep '@am__include@ .*/xtra\.P' Makefile.in
