@@ -1,5 +1,12 @@
 2004-01-01  Alexandre Duret-Lutz  <adl@gnu.org>
 
+	* automake.in (handle_languages): Do not define DEP_FILES.
+	* m4/depout.m4 (_AM_OUTPUT_DEPENDENCY_COMMANDS): Extract included
+	files with $(DEPDIR) in their name instead of DEP_FILES.
+	* tests/depend.test, tests/depend4.test, tests/exsource.test:
+	Adjust.
+	Suggested by Tom Tromey.
+
 	Do not output .lo rules for programs and static libraries objects,
 	and do not output .o/.obj rules for libtool libraries.  This is
 	about explicit rules only, not inference rules.
